fix problem with svg on safari

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -83,7 +83,6 @@ header{
   margin: 10px auto;
 }
 #canvas_container {
-  width:1200px;
   margin: 20px auto;
 }
 
